--- a/学习总结--微服务架构图.md
+++ b/学习总结--微服务架构图.md
@@ -50,3 +50,19 @@
 
 - 体验怎么提升呢？中台只是手段，中台的目的是支撑小前台，通过改善前台来提升用户体验，通过梳理业务SLA沉淀到中台，以服务化的方式输出，确保最低服务体验标准。
 - 成本如何降低？通过合并重组相似组织来降低，如果系统存在大量重复建设，就说明公司存在大量重复组织，合并这些组织就能够降低成本，从而提升效能。
+
+
+
+
+
+![](E:\学习总结\img\jiagou.png)
+
+
+
+
+
+![](E:\学习总结\img\jiagou2.png)
+
+
+
+![](E:\学习总结\img\jiagou3.png)
