--- a/学习总结--字符集及编码.md
+++ b/学习总结--字符集及编码.md
@@ -8,7 +8,7 @@
 - **码位值**是一个字符在某个字符集中的映射的值，一般是一个整数。
 - **字符编码(Character encoding)** 是把一个码位值转换为用于存储和传输的二进制序列的方式。是把字符集中的字符编码为特定的二进制数（码位值）,**以便在计算机中存储**。每个字符集中的字符都对应一个唯一的二进制编码
 
-![](C:\Users\lenovo\Desktop\学习总结\img\webp.png)
+![](F:\学习总结\img\webp.png)
 
 ## 常用字符集
 
