--- a/学习总结--微服务架构图.md
+++ b/学习总结--微服务架构图.md
@@ -12,25 +12,25 @@
 - 业务中台：
 - 技术中台：通信中台、AI中台、安全中台
 
-![](E:\学习总结\img\JD8fc09645712dbcc13c3ab23f34b8e1a273e5a876.png)
+![](.\img\JD8fc09645712dbcc13c3ab23f34b8e1a273e5a876.png)
 
-![](E:\学习总结\img\JDformat.png)
-
-
-
-![](E:\学习总结\img\JD7e93b1b8ddfdbcfead3e71449550363c638139a5.png)
+![](.\img\JDformat.png)
 
 
 
-![](E:\学习总结\img\alibabaZT.png)
+![](.\img\JD7e93b1b8ddfdbcfead3e71449550363c638139a5.png)
 
 
 
-![](E:\学习总结\img\alibabZTH.png)
+![](.\img\alibabaZT.png)
 
-![](E:\学习总结\img\baiduZT.png)
 
-![](E:\学习总结\img\baiduztzs.png)
+
+![](.\img\alibabZTH.png)
+
+![](.\img\baiduZT.png)
+
+![](.\img\baiduztzs.png)
 
 ##  中台发展阶段
 
@@ -55,14 +55,14 @@
 
 
 
-![](E:\学习总结\img\jiagou.png)
+![](.\img\jiagou.png)
 
 
 
 
 
-![](E:\学习总结\img\jiagou2.png)
+![](.\img\jiagou2.png)
 
 
 
-![](E:\学习总结\img\jiagou3.png)
+![](.\img\jiagou3.png)
